# Windows-Hello-VPR

./: .gitignore  ReadMe.md
参考论文/0. 基础框架/: 基于声纹识别的说话人身份确认方法的研究_周雷.caj  声纹识别系统关键技术研究_裴鑫.caj
参考论文/1. MFCC/: 基于MFCC和GMM的说话人识别系统研究_丁爱明.caj  基于MFCC的说话人识别系统_郭春霞.caj
参考论文/2. GMM模型/: 基于GMM_SVM说话人识别的信道算法研究_翟玉杰.caj
参考论文/3. GMM模型/: 基于矢量量化_VQ_和混合高斯模型_GMM_的说话人识别的研究_许百林.caj  运用高斯混合模型识别动物声音情绪_刘恒.caj  高斯混合模型用于语音情感识别研究_蔡桂林.caj
参考论文/3. 性别识别/: 基于MFCC和SVM的说话人性别识别_肖汉光.caj
参考论文/4. 性别识别/: 基于MFCC与基频特征贡献度识别说话人性别_庞程.caj  基于性别分类的说话人识别研究_高原.caj
参考资料/0. 声纹识别/: 1. 文本无关的声纹识别验证.url  2. openVP.url  3. 文本无关的声纹识别 验证.url
参考资料/1. 预加重/: 1.1 语音信号的预加重和加窗处理.url  1.2 语音信号处理之预加重.url  1.3 笔记--语音信号的预加重.url  1.4 语音信号预加重算法.url  1.5 预加重、去加重和均衡.url  1.6 预加重技术.url
参考资料/2. Mel频率倒谱系数/: 1. 语音信号处理之（四）梅尔频率倒谱系数（MFCC）.url  2. 梅尔频率倒谱系数（MFCC）教程.url  3. Mel倒谱系数.url  4. 笔记 之 梅尔倒谱系数特征（MFCC）.url  7. 语音识别（MFCC）.url  8. MFCC特征提取详细计算过程.url
参考资料/2. Mel频率倒谱系数/0. MFCC/: 10. 梅尔频率倒谱系数（MFCC）的提取过程与C  代码实现.url  11. 语音识别之MFCC.url  5. MFCC参数提取及Matalab实现.url  6. 12-2 MFCC.url  9. 语音特征参数MFCC计算的详细过程.url
参考资料/2. Mel频率倒谱系数/1. 快速傅里叶变换/: 1. 快速傅里叶变换(FFT)的原理及公式.url  10. 【入门向】由DTFT到FFT.url  11. Fast Fourier Transform.url  12. 快速傅里叶变换(fft).url  13. [转载]几种快速傅里叶变换(FFT)的C++实现.url  14. 快速傅里叶变换实现.url  2. 我所理解的快速傅里叶变换（FFT）.url  3. 理解快速傅里叶变换（FFT）算法.url  4. 从头到尾彻底理解傅里叶变换算法、上.url  5. 快速傅里叶变换 FFT易懂版.url  6. （原创）快速傅里叶变换（FFT）（图）  .url  7. 从多项式乘法到快速傅里叶变换.url  8. 快速傅里叶变换FFT算法的用途.url  9. 【安富莱DSP教程】第24章 快速傅里叶变换原理（FFT）.url
参考资料/3. GMM模型/: 0. 斯坦福公开课.url  1. 浅显易懂的GMM模型及其训练过程.url  10. 高斯混合模型GMM的C++实现.url  13. 机器学习 - 高混合模型参数估计的EM算法.url  14. 高斯混合模型 C++实现.url  2. 高斯混合模型（GMM）介绍以及学习笔记.url  3. GMM的EM算法实现.url  4. 混合高斯模型GMM.url  5. GMM模型初探.url  6. 图像算法之九：混合高斯模型GMM.url  7. EM及高斯混合模型.url  8. 混合高斯模型GMM.url  9. GMM模型学习.url
参考资料/4. 桌面应用/: 1. C++进行音频管理.url  10. 如何得到ListControl选中的项 ListControl选中一行.url  2. Windows基础-实时录音程序（WaveXXX）.url  3. 使用WindowsAPI获取录音音频的方法.url  4. 使用WindowsAPI获取录音音频的方法.url  5. c++多线程编程.url  6. c++创建多线程的三种方式的比较 和 多线程通信.url  7. C++ 获取文件夹下的所有文件名.url  8. C++文件读写详解（ofstream,ifstream,fstream）.url  9. 用C++写入UTF-8格式的文件.url
参考资料/5. 后台应用/: 1. Win10锁屏状态下运行任意程序的设置方法！.url  2. 最近想做一个虚拟键盘，遇到了一个有关问题请问.url  3. VC MFC 发送模仿键盘消息.url  4. [WinAPI] 获取窗口句柄的几种方法.url  5. 如何查找窗体，获取窗体的句柄，Hwnd FindWindow函数.url  6. VC 向其他程序发送按键消息.url  7. 获取当前具有输入焦点控件的窗口句柄.url  8. 如何用C语言获得本机IP地址？（获取一个ip或者获取所有ip）.url  9. MD5百科.url
参考资料/6. 文件传输安全/: 2. Socket传输文件时进行校验(简单解决TCP粘包问题).url  3. Wireshark-TCP协议分析（包结构以及连接的建立和释放）.url
参考资料/6.文件传输安全/: 1. C-C大文件数据网络传输方法总结.url
参考资料/7. 打包部署/: 1. VS2010 Windows应用程序打包.url
参考资料/8. 实时语音数据获取/: 第12章-多媒体开发与MCI和MMAPI编程.doc  第13章--MCI和MMAPI编程C.doc
发布部署/发布部署/: ReadMe.txt
发布部署/发布部署/SQL数据结构/: windowshello-vpr-logsystem.sql
发布部署/发布部署/Windows Hello - VPR/: info.conf
发布部署/发布部署/Windows Hello Log System/: WindowsHelloLogSystem.war  form_validate.jsp  index.jsp
发布部署/发布部署/注册表导入/: Install.bat  remove.reg
文档论文/: 常熟理工学院本科毕业设计（论文）保密申请.doc  常熟理工学院本科毕业设计（论文）诚信承诺书.doc  论文模型图.mdj
文档论文/毕业论文/: ~$声纹识别的Windows Hello应用操作说明书.docx  ~WRL3016.tmp  基于声纹识别的Windows Hello应用操作说明书.docx  常熟理工学院本科毕业设计（论文）中期进展情况检查表.doc  论文模型图.mdj
文档论文/毕业论文/常熟理工学院毕业设计（论文）过程材料/: 常熟理工学院本科毕业设计（论文）中期进展情况检查表.doc  常熟理工学院本科毕业设计（论文）保密申请.doc  常熟理工学院本科毕业设计（论文）基本情况汇总表.xls  常熟理工学院本科毕业设计（论文）外文翻译.doc  常熟理工学院本科毕业设计（论文）封面格式.doc  常熟理工学院本科毕业设计（论文）开题报告.doc  常熟理工学院本科毕业设计（论文）成绩汇总表.xls  常熟理工学院本科毕业设计（论文）成绩评定表.doc  常熟理工学院本科毕业设计（论文）撰写规范.doc  常熟理工学院本科毕业设计（论文）课题安排汇总表.xls  常熟理工学院本科毕业设计（论文）选题论证表 .doc
文档论文/毕业论文/毕业论文/: 基于声纹识别的Windows Hello应用本科毕业设计论文中期修改.docx  基于声纹识别的Windows Hello应用本科毕业设计论文初稿.docx  基于声纹识别的Windows Hello应用本科毕业设计论文后期修改-1.docx  基于声纹识别的Windows Hello应用本科毕业设计论文后期修改-2.docx  基于声纹识别的Windows Hello应用本科毕业设计论文后期修改-3.docx  基于声纹识别的Windows Hello应用本科毕业设计论文后期修改.docx  基于声纹识别的门禁应用.docx  常熟理工学院本科毕业设计（论文）开题报告.doc  操作说明书模型图.mdj  论文模型图.mdj  论文模型图.vsd
文档论文/毕设成绩/: 092214109827030.docx  092214109_张立飞_中期检查表.doc  张立飞_092214109_开题报告.doc  张立飞_092214109_成绩评定册.doc  张立飞_092214109_选题论证表.doc
文档论文/知识产权/: 基于声纹识别的Windows Hello应用软件源代码.docx  软件著作权登记申请表 - 基于声纹识别的Windows Hello应用软件.doc
文档论文/软件著作权/: 基于声纹识别的Windows Hello应用软件操作说明书.docx  常熟理工学院知识产权申请审批表 - 基于声纹识别的Windows Hello应用软件.doc
相关资源/flash/: 跳动的乐谱.swf
相关资源/flash/动画圆/: flash4351.fla  flash4351.swf
相关资源/flash/响应式乐谱/: flash4520.fla
程序代码/: Commit.bat
程序代码/SQL备份/: windowshello-vpr-logsystem.sql
程序代码/Voiceprint Recognition/: Voiceprint Recognition.sln
程序代码/Windows Hello - VPR/: ReadMe.md  Windows Hello - VPR.sln
程序代码/Windows Hello Application/: Windows Hello Application.sln
程序代码/参考代码/GMM/gaussian_mixture_models-master/: .gitignore  CMakeLists.txt  README.md
程序代码/参考代码/GMM/gaussian_mixture_models-master/cmake/: Findgmms.cmake
程序代码/参考代码/GMM/gaussian_mixture_models-master/src/gmms/: defs.h  gaussian.cpp  gaussian.h  gaussian_mixture_model.cpp  gaussian_mixture_model.h  gmm_classifier.cpp  gmm_classifier.h  gmm_regressor.cpp  gmm_regressor.h  k_means.cpp  k_means.h  matrix_io.cpp  matrix_io.h  pca.cpp  pca.h
程序代码/参考代码/GMM/gaussian_mixture_models-master/src/test/: gmm_classifier_test.cpp  gmm_regressor_test.cpp  gmm_test.cpp  k_means_test.cpp  pca_test.cpp
程序代码/重构中/: 重构函数转换.xls
训练数据/voiceLib/: 男-qinlihao(你好).txt  男-zhanglifei(HelloWorld).txt  男-zhanglifei(你好).txt
(+1008 files in other folders)
